功能：项目静态文件展示结构搭建

--- a/COVID19Map/templates/Statistics/BaseByStatistics.html
+++ b/COVID19Map/templates/Statistics/BaseByStatistics.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
-{% block title %}
-{% endblock %}
+
 {% block head %}
-    <script src="{{ url_for("static",filename="navigation.js") }}"></script>
+    <script src="{{ url_for("static",filename="Statistics/navigation.js") }}"></script>
 {% endblock %}
-{% block body %}
+
+{% block  navigation %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Statistics</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,22 +18,10 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                       data-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
+                    <a class="nav-link" href="#">运行日志</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link disabled">统计日志</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -42,4 +30,7 @@
             </form>
         </div>
     </nav>
+{% endblock %}
+
+{% block body %}
 {% endblock %}
